--- a/Views/css/croppie.css
+++ b/Views/css/croppie.css
@@ -100,8 +100,8 @@
 
 .croppie-container .cr-slider-wrap {
     width: 75%;
-    margin: 15px auto;
     text-align: center;
+    margin-inline: auto;
 }
 
 .croppie-result {
