--- a/Views/css/usracc-modal.css
+++ b/Views/css/usracc-modal.css
@@ -10,7 +10,9 @@
     left: 19vw;
     top: 14px;
     width: 26vw;
+    min-width: 490px;
     height: 70vh;
+    min-height: 620px;
     box-shadow: var(--box-shadow-main);
     background: var(--bg-user-modal);
 }
@@ -60,19 +62,47 @@
 
 #b-crop-body {
     display: flex;
-    /* min-width: 856px; */
     margin-inline: 0.5em;
-    justify-content: center;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: flex-start;
+    align-content: center;
     flex-wrap: nowrap;
-    flex-direction: column-reverse;
-    align-content: flex-start;
 }
 
 #crop-flex {
     display: flex;
     width: 100vw;
     height: 100vh;
+    justify-content: space-between;
+    align-items: baseline;
+    align-content: space-between;
+    flex-wrap: wrap;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+}
+
+#croppie-flex {
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: 50vh;
+}
+
+.crop_controls {
+    width: 750px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#crop-container {
+    width: 750px;
+    height: 800px;
+}
+
+.flex_crop_form {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-evenly;
+    align-content: center;
 }
