--- a/Views/css/login-register-styles.css
+++ b/Views/css/login-register-styles.css
@@ -11,8 +11,8 @@ a {
 }
 
 
-p {
-    font-size: 0.8rem;
+p .flogin_size {
+    font-size: 1.1rem;
 }
 
 
@@ -28,7 +28,7 @@ a:hover{
 
 input {
     font-family: "Century Gothic";
-    font-size: 0.8rem;
+    font-size: 1rem;
     padding: 10px;
     background-color: var(--light-blue);
     border: 1px solid cornflowerblue;
@@ -59,10 +59,8 @@ input {
 .form-login {
     flex-direction: column;
     justify-content: center;
-    width: 23vw;
-    height: 62vh;
-    min-width: 294px;
-    min-height: 392px;
+    width: 400px;
+    height: 520px;
     display: flex;
     gap: 1rem;
     margin: auto;
@@ -77,10 +75,8 @@ input {
 .form-register {
     flex-direction: column;
     justify-content: center;
-    width: 23vw;
-    height: auto;
-    min-width: 294px;
-    min-height: 392px;
+    width: 400px;
+    height: 570px;
     display: flex;
     gap: 1rem;
     margin: auto;
@@ -108,7 +104,7 @@ input {
 
 .form__error-message{
     font-family: "Franklin Gothic Book";
-    font-size: 0.7em;
+    font-size: 1em;
     margin-top: 0;
     margin-bottom: 0;
     color: var(--error);
@@ -119,4 +115,5 @@ input {
     font-family: "Century Gothic";
     font-weight: normal;
     text-align: center;
+    font-size: 3em;
 }
