--- a/Views/css/main-styles.css
+++ b/Views/css/main-styles.css
@@ -97,7 +97,7 @@ body {
 
 .nav-left-bottom-overflow {
     overflow: auto;
-    width: 100%;
+    width: 98%;
 }
 
 /*<!--------------------------------- CENTRAL ---------------------------------->*/
@@ -159,4 +159,25 @@ div.central-bottom
     letter-spacing: 0.02em;
 }
 
-/*===================================== ID`s ====================================*/
+/*===================================== SCROLLBAR ====================================*/
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+box-shadow: inset 0 0 10px grey; 
+border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: var(--btn-main-grad);
+border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: #b30000; 
+}
