--- a/Views/css/usracc-modal.css
+++ b/Views/css/usracc-modal.css
@@ -106,3 +106,10 @@
     justify-content: space-evenly;
     align-content: center;
 }
+
+
+#p-crop-warn-msg {
+    font-size: larger;
+    color:antiquewhite;
+    margin:0;
+}
